fix overflow hidden

--- a/sass/_unittest.scss
+++ b/sass/_unittest.scss
@@ -677,7 +677,8 @@ body {
       }
     }
   }
-  &.postid-1163 {
+  &.postid-1163,
+  &.postid-568 {
     .blog-details-wrapper {
       .single-post-item .post-content {
         .wp-caption {
